feat(es/ruralvia): fetch transactions
[IFD-2473]

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/resources/accountsTransactionsForLast3Months.html
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/ruralvia/resources/accountsTransactionsForLast3Months.html
@@ -1126,7 +1126,7 @@
         <div id="PAGINAR" align="right">
 
 
-          <a href="#" onClick="inicio();return false;" >Inicio</a>&nbsp;&nbsp;<a href="#" onClick="siguientes();return false;" >Siguientes</a>
+          <a href="#" onClick="inicio();return false;" >Inicio</a>&nbsp;&nbsp;<a href="#" onClick="return false;" >Siguientes</a>
 
 
         </div>
